# v0rtex

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  cursor-super-prompt.md  pyproject.toml  requirements.txt  super-prompt.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  contributing-guide.md  logbook.md  pypi-publishing.md  release-checklist.md  todo.md
docs/decisions/: 0001-record-adr.md
docs/wiki/: README.md  api-reference.md  configuration.md  deployment.md  troubleshooting.md
examples/: advanced_scraping.json  basic_scraping.json  pagination_scraping.json
scripts/: setup.py
src/: __init__.py  __main__.py  cli.py
src/core/: __init__.py  scraper.py  session.py
src/utils/: captcha_solver.py  vpn_manager.py
src/v0rtex/: __init__.py  cli.py
src/v0rtex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/v0rtex/core/: config.py  scraper.py
src/v0rtex/core/pagination/: __init__.py  detector.py  navigator.py  state.py  strategy.py
src/v0rtex/utils/: __init__.py  anti_detection.py
tests/: test_config.py  test_pagination.py
